--- a/index.html
+++ b/index.html
@@ -4,53 +4,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/libs/daypicker/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="/UF-SEARCH/libs/daypicker/bootstrap-datepicker.css">
     <title>UF</title>
 </head>
 
 <body>
-    <center>
-        <div class="container">
-            <p id="uf-actual"></p>
-            <button class="btn btn-primary" type="button" id="consulta">Consulta Fecha</button>
-            <button class="btn btn-warning" type="button" id="mes">UF AÑO</button>
-        </div>
-        </br>
-        <div id="tabla">
-        </div>
-        <div id="tabla2"></div>
 
 
-        <div class="modal fade" tabindex="-1" role="dialog" id="modal-date">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">Selecciona una fecha</h4>
-                    </div>
-                    <div class="modal-body">
-                        <div class="input-group date js-date">
-                            <input type="text" class="form-control" id="FechaSeleccionada"><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-primary" id="FechaBoton">Seleccionar</button>
+    <div class="container text-center">
+        <p id="uf-actual"></p>
+        <button class="btn btn-primary" type="button" id="consulta">Consulta Fecha</button>
+    </div>
+
+    <div class="container text-center">
+        <button class="btn btn-warning" type="submit" id="consultaMes">Consulta Mes</button>
+    </div>
+
+    </br>
+
+
+
+
+
+
+
+
+    <div class="container text-center">
+        <h1>UF</h1>
+        <div class="col-md-12">
+            <table class="table table-bordered table-sm">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Fecha</th>
+                        <th>UF</th>
+                    </tr>
+                </thead>
+                <tbody id="TableUF">
+
+                </tbody>
+
+            </table>
+        </div>
+    </div>
+
+
+
+
+
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="modal-date">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Selecciona una fecha</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group date js-date">
+                        <input type="text" class="form-control" id="FechaSeleccionada"><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
                     </div>
                 </div>
-                <!-- /.modal-content -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" id="FechaBoton">Seleccionar</button>
+                </div>
             </div>
-            <!-- /.modal-dialog -->
+            <!-- /.modal-content -->
         </div>
-        <!-- /.modal -->
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
 
-    </center>
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="modal-mes">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Selecciona una fecha</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group date js-dateMes">
+                        <input type="text" class="form-control" id="FechaMes"><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" id="FechaMesButton">Seleccionar</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
 </body>
 <!-- jquery -->
 
-<script src="/libs/jquery-3.5.1.min.js"></script>
-<script src="/libs/daypicker/bootstrap-datepicker.min.js"></script>
-<script src="/js/app.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="/UF-SEARCH/libs/daypicker/bootstrap-datepicker.min.js"></script>
+<script src="/UF-SEARCH/js/app.js"></script>
 
 
 <!-- Latest compiled and minified CSS -->
