--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" id="FechaBoton">Seleccionar</button>
+                    <button type="button" class="btn btn-primary" id="FechaButton">Seleccionar</button>
                 </div>
             </div>
             <!-- /.modal-content -->
